--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,16 @@
 services:
-
-  # WireGuard VPN service
   wireguard:
-    image: linuxserver/wireguard:latest
+    image: linuxserver/wireguard:v1.0.20210914-ls7
     container_name: wireguard
     cap_add:
       - NET_ADMIN
     volumes:
       - ./config:/config
     ports:
-      # Port for WireGuard-UI
       - "5000:5000"
-      # Port of the WireGuard VPN server
       - "51820:51820/udp"
     restart: unless-stopped
 
-  # WireGuard-UI service
   wireguard-ui:
     image: ngoduykhanh/wireguard-ui:latest
     container_name: wireguard-ui
@@ -23,8 +18,7 @@ services:
       - wireguard
     cap_add:
       - NET_ADMIN
-    # Use the network of the 'wireguard' service
-    # This enables to show active clients in the status page
+    # use the network of the 'wireguard' service. this enables to show active clients in the status page
     network_mode: service:wireguard
     environment:
       - SENDGRID_API_KEY
@@ -32,11 +26,10 @@ services:
       - EMAIL_FROM_NAME
       - SESSION_SECRET
       - WGUI_USERNAME=admin
-      - WGUI_PASSWORD=password
+      - WGUI_PASSWORD=admin
       - WG_CONF_TEMPLATE
       - WGUI_MANAGE_START=true
       - WGUI_MANAGE_RESTART=true
-    restart: unless-stopped
     logging:
       driver: json-file
       options:
@@ -44,3 +37,4 @@ services:
     volumes:
       - ./db:/app/db
       - ./config:/etc/wireguard
+    restart: unless-stopped
